--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>pl.pragmatists</groupId>
+          <artifactId>JUnitParams</artifactId>
+          <version>1.0.2</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 </project>
